fix(button): icon size and text-wrap
https://github.com/yooga-tecnologia/mantra/issues/45

--- a/src/components/button/styles/__base.scss
+++ b/src/components/button/styles/__base.scss
@@ -75,6 +75,7 @@ $border-radius-medium: map.get(sizing.$border-radius-map, "medium");
     span {
       font-size: map.get($size-map, "font-size");
       font-weight: 500;
+      text-wrap: nowrap;
     }
 
     &.#{$component-prefix}-icon {
